minor fixes, disabled retroDex link for now

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 			<article>
 				<h3 id="gallery">My projects</h3>
 				<section>
-					<h4>Web tools:</h4>
+					<h4>Web tools</h4>
 					<ul class="flexbox">
 						<li>
 						  <a href="http://hwtest.net" target="_blank">
@@ -59,12 +59,14 @@
 				<section>
 					<h4>Webapps</h4>
 					<ul class="flexbox">
+						<!--
 						<li>
 						  <a href="https://dex.sildrid.com" target="_blank">
 						    <img src="res/dexLogo.png" alt="retroDex logo">
 						    retroDex
 						  </a>
 						</li>
+					-->
 					</ul>
 				</section>
 				<hr>
