changed avatar, iprovements on achivements carousel

--- a/index.html
+++ b/index.html
@@ -1,65 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8"/>
-		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-		<meta name="description" content="My web developer stats, Silver's portfolio page.">
-		<link rel="stylesheet" href="css/style.css"/>
-		<script src="main.js" defer></script>
-		<title>Sildrid Lab: Portfolio page</title>
-		<link rel="icon" href="res/sildrid.png">
-	</head>
-	<body>
-		<header>
-			<img src="res/sildrid.png" alt="logo">
-			<h1>Sildrid</h1>
-		</header>
-		<nav>
-			<ul class="flexbox">
-				<li>
-				  <a href="#welcome">Welcome</a>
-				</li>
-				<li>
-				  <a href="#gallery">Gallery</a>
-				</li>
-				<li>
-				  <a href="#about">About</a>
-				</li>
-				<li>
-				  <a href="#supportme">Support Me</a>
-				</li>
-			</ul>
-		</nav>
-		<main>
-			<article>
-				<h3 id="welcome">
-				  What is this website?
-				</h3>
-				<section>
-					<p>
-						Welcome to <strong>Sildrid</strong>, my portfolio page!</br>
-						Here you can check some of my work.
-					</p>
-				</section>
-			</article>
-			<article>
-				<h3 id="gallery">My projects</h3>
-				<section>
-					<h4>Web tools</h4>
-					<ul class="flexbox">
-						<li>
-						  <a href="http://hwtest.net" target="_blank">
-						    <img src="res/hwtlogo.png" alt="hwtest logo">
-						    hwtest.net
-						  </a>
-						</li>
-					</ul>
-				</section>
-				<hr>
-				<section>
-					<h4>Webapps</h4>
-					<ul class="flexbox">
-						<!--
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="My web developer stats, Silver's portfolio page."
+    />
+    <link rel="stylesheet" href="css/style.css" />
+    <script src="main.js" defer></script>
+    <title>Sildrid Lab: Portfolio page</title>
+    <link rel="icon" href="res/sildrid.png" />
+  </head>
+  <body>
+    <header>
+      <img src="res/sildrid.png" alt="logo" />
+      <h1>Sildrid</h1>
+    </header>
+    <nav>
+      <ul class="flexbox">
+        <li>
+          <a href="#welcome">Welcome</a>
+        </li>
+        <li>
+          <a href="#gallery">Gallery</a>
+        </li>
+        <li>
+          <a href="#about">About</a>
+        </li>
+        <li>
+          <a href="#supportme">Support Me</a>
+        </li>
+      </ul>
+    </nav>
+    <main>
+      <article>
+        <h3 id="welcome">What is this website?</h3>
+        <section>
+          <p>
+            Welcome to <strong>Sildrid</strong>, my portfolio page!<br />
+            Here you can check some of my work.
+          </p>
+        </section>
+      </article>
+      <article>
+        <h3 id="gallery">My projects</h3>
+        <section>
+          <h4>Web tools</h4>
+          <ul class="flexbox">
+            <li>
+              <a href="http://hwtest.net" target="_blank">
+                <img src="res/hwtlogo.png" alt="hwtest logo" />
+                hwtest.net
+              </a>
+            </li>
+          </ul>
+        </section>
+        <hr />
+        <section>
+          <h4>Webapps</h4>
+          <ul class="flexbox">
+            <!--
 						<li>
 						  <a href="https://dex.sildrid.com" target="_blank">
 						    <img src="res/dexLogo.png" alt="retroDex logo">
@@ -67,61 +68,104 @@
 						  </a>
 						</li>
 					-->
-					</ul>
-				</section>
-				<hr>
-				<section>
-					<h4>Websites</h4>
-					Working on it...
-				</section>
-			</article>
-			<article>
-				<h3 id="about">About me</h3>
-				<section>
-					<h4>Something about me:</h4>
-					<img class="silver" src="res/silver.jpg">
-					<p>
-						My name is Pablo Sosa, I usually go by Silver.</br>
-						I'm a self taught web developer.</br>
-						My native language is Spanish, but I'm also good at English.</br>
-						I like fun and challenging stuff, always searching for ways to better myself!
-					</p>
-				</section>
-				<section id="achivements">
-					<h4>My achivements:</h4>
-					<div class="flexbox">
-						<input type="radio" name="achivement" id="html-cert" checked>
-						<label for="html-cert"><img src="res/HTML_cert.jpg" alt="html cert"></label>
-						<input type="radio" name="achivement" id="css-cert">
-						<label for="css-cert"><img src="res/CSS_cert.jpg" alt="css cert"></label>
-						<input type="radio" name="achivement" id="js-cert">
-						<label for="js-cert"><img src="res/JS_cert.jpg" alt="js cert"></label>
-						<input type="radio" name="achivement" id="m001">
-						<label for="m001"><img src="res/MDB_M001.jpeg" alt="mongodb cert"></label>
-					</div>
-				</section>
-				<section>
-					<h4>Contact</h4>
-					<a href="mailto:silver@sildrid.com">silver@sildrid.com</a>
-				</section>
-			</article>
-			<article>
-				<h3 id="supportme">Support me!</h3>
-				<section>
-					<p>
-						I will try to keep all content with minimal or no ads. </br>
-						If you want to support my work, you can do so by the "Donate" button </br>
-						I will really apreaciate it!
-					<p>
-					<div class="flexbox">
-						<a href="https://www.paypal.com/donate/?hosted_button_id=T4AMSP5X7H874"><img id="donate-img" src="res/donate.png"></a>
-					</div>
-				</section>
-			</article>
-		</main>
-		<aside>
-			<canvas width=320 height=240></canvas>
-		</aside>
-		<footer>sildrid 2023</footer>
-	</body>
+          </ul>
+        </section>
+        <hr />
+        <section>
+          <h4>Websites</h4>
+          Working on it...
+        </section>
+      </article>
+      <article>
+        <h3 id="about">About me</h3>
+        <section>
+          <h4>Something about me:</h4>
+          <div class="silver"></div>
+          <p>
+            My name is Pablo Sosa, I usually go by Silver.<br />
+            I'm a self taught web developer.<br />
+            My native language is Spanish, but I'm also good at English.<br />
+            I like fun and challenging stuff, always searching for ways to
+            better myself!
+          </p>
+        </section>
+        <section id="achivements">
+          <h4>My achivements:</h4>
+          <div id="achivementImg">
+            <img src="res/HTML_cert.jpg" />
+          </div>
+
+          <form
+            class="flexbox"
+            onchange="let selectedImg = document.querySelector(`input[name='achivement']:checked`).value;document.getElementById('achivementImg').innerHTML=`<img src='${selectedImg}' />`;"
+          >
+            <input
+              type="radio"
+              name="achivement"
+              id="html-cert"
+              value="res/HTML_cert.jpg"
+              checked
+            />
+            <label for="html-cert"
+              ><img src="res/HTML_cert.jpg" alt="html cert"
+            /></label>
+            <input
+              type="radio"
+              name="achivement"
+              id="css-cert"
+              value="res/CSS_cert.jpg"
+            />
+            <label for="css-cert"
+              ><img src="res/CSS_cert.jpg" alt="css cert"
+            /></label>
+            <input
+              type="radio"
+              name="achivement"
+              id="js-cert"
+              value="res/JS_cert.jpg"
+            />
+            <label for="js-cert"
+              ><img src="res/JS_cert.jpg" alt="js cert"
+            /></label>
+            <input
+              type="radio"
+              name="achivement"
+              id="m001"
+              value="res/MDB_M001.jpeg"
+            />
+            <label for="m001"
+              ><img src="res/MDB_M001.jpeg" alt="mongodb cert"
+            /></label>
+          </form>
+        </section>
+        <section>
+          <h4>Contact</h4>
+          <a href="mailto:silver@sildrid.com">silver@sildrid.com</a>
+        </section>
+      </article>
+      <article>
+        <h3 id="supportme">Support me!</h3>
+        <section>
+          <p>
+            I will try to keep all content with minimal or no ads. <br />
+            If you want to support my work, you can do so by the "Donate" button
+            <br />
+            I will really apreaciate it!
+          </p>
+
+          <p></p>
+          <div class="flexbox">
+            <a
+              href="https://www.paypal.com/donate/?hosted_button_id=T4AMSP5X7H874"
+              ><img id="donate-img" src="res/donate.png"
+            /></a>
+          </div>
+        </section>
+      </article>
+    </main>
+    <aside>
+      <canvas width="320" height="240"></canvas>
+    </aside>
+    <footer>sildrid 2023</footer>
+  </body>
 </html>
